checked for seasonality

--- a/notebooks/01_eda_and_research.ipynb
+++ b/notebooks/01_eda_and_research.ipynb
@@ -11,24 +11,7 @@
     "import numpy as np\n",
     "\n",
     "# STEP 1: Load Raw Data\n",
-    "df = pd.read_csv('../data/raw/BrentOilPrices.csv')\n",
-    "\n",
-    "# STEP 2: Clean Dates\n",
-    "# The format '%d-%b-%y' handles '20-May-87'\n",
-    "df['Date'] = pd.to_datetime(df['Date'], format='mixed')\n",
-    "df.sort_values('Date', inplace=True)\n",
-    "df.set_index('Date', inplace=True)\n",
-    "\n",
-    "# STEP 3: Handle missing days (filling weekend gaps)\n",
-    "df = df.resample('D').interpolate(method='linear')\n",
-    "\n",
-    "# STEP 4: Create Log Returns (This is your \"Processed\" feature)\n",
-    "# formula: log(Price_today / Price_yesterday)\n",
-    "df['Log_Return'] = np.log(df['Price'] / df['Price'].shift(1))\n",
-    "\n",
-    "# STEP 5: Save for later tasks\n",
-    "df.to_csv('../data/processed/brent_processed.csv')\n",
-    "print(\"Processing Complete. Data is now ready for PyMC modeling.\")"
+    "df = pd.read_csv('../data/raw/BrentOilPrices.csv')"
    ]
   },
   {
@@ -88,6 +71,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53a09966",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "55ff3da8",
@@ -103,6 +92,55 @@
     "# Boxplot to see outliers\n",
     "sns.boxplot(x=df['Price'], ax=axes[1], color='lightgreen')\n",
     "axes[1].set_title('Visualizing Price Outliers')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33215c03",
+   "metadata": {},
+   "source": [
+    "# D. Checking for \"Seasonality\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa3ad3bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Year'] = df.index.year\n",
+    "df['Month'] = df.index.month\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.boxplot(x='Month', y='Price', data=df)\n",
+    "plt.title('Price Distribution by Month (Seasonality Check)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bf993f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean Dates\n",
+    "# The format '%d-%b-%y' handles '20-May-87'\n",
+    "df['Date'] = pd.to_datetime(df['Date'], format='mixed')\n",
+    "df.sort_values('Date', inplace=True)\n",
+    "df.set_index('Date', inplace=True)\n",
+    "\n",
+    "# Handle missing days (filling weekend gaps)\n",
+    "df = df.resample('D').interpolate(method='linear')\n",
+    "\n",
+    "#  Create Log Returns (This is your \"Processed\" feature)\n",
+    "# formula: log(Price_today / Price_yesterday)\n",
+    "df['Log_Return'] = np.log(df['Price'] / df['Price'].shift(1))\n",
+    "\n",
+    "#  Save for later tasks\n",
+    "df.to_csv('../data/processed/brent_processed.csv')\n",
+    "print(\"Processing Complete. Data is now ready for PyMC modeling.\")"
    ]
   }
  ],
